--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@stream-io/flat-list-mvcp": "^0.10.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-native-bidirectional-infinite-scroll": "^0.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
